// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResultsList /> should ConfirmYourBooking drawer to be visible 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    style="overflow: hidden;"
  >
    <div>
      <nav
        class="sc-fubDmA jSFNkN"
      >
        <a
          aria-current="page"
          class="sc-pGaPU kpubXZ active"
          href="/"
        >
          New Booking
        </a>
        <a
          class="sc-pGaPU zBnL"
          href="/my-bookings"
        >
          My Bookings
        </a>
      </nav>
      <div
        class="sc-kstpWv UAquR"
      >
        <form
          class="sc-crrtmM hShWtl"
          data-testid="booking-form"
        >
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Check in
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-check-in"
              max="Invalid date"
              min="2023-12-31"
              name="checkIn"
              type="date"
              value=""
            />
          </div>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Check out
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-check-out"
              min="2024-01-01"
              name="checkOut"
              type="date"
              value=""
            />
          </div>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Number of guests
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-qty-guests"
              max="4"
              min="1"
              name="qtyGuests"
              type="number"
              value=""
            />
          </div>
          <button
            class="sc-jrAGKZ cntfQH"
            data-testid="check-availability"
          >
            Check Availability
          </button>
        </form>
        <ul
          class="sc-fodVRF bXDvv"
        >
          <div
            class="sc-hBEZvw jsXyEX"
            data-testid="no-results-content"
          >
            <img
              alt="no results image"
              class="sc-eCstZk cgIxof"
              data-testid="image"
            />
            <p>
              We didn't find available bedrooms with this search criteria
            </p>
          </div>
        </ul>
      </div>
      <div
        class="sc-idOjMB kWZquY"
      />
      <div
        class="sc-cxFKTC hsKcGb"
        data-testid="base-drawer"
      >
        <button
          class="sc-dmlpXa gYemGx"
          data-testid="close-button"
        >
          X
        </button>
        <form
          class="sc-crrtmM XATYL"
          data-testid="confirm-your-booking-form"
        >
          <h3
            class="sc-dQpIV fPWcU"
          >
            Confirm Your Booking
          </h3>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Name
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-name"
              name="name"
              type="text"
              value=""
            />
          </div>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Email
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-email"
              name="email"
              type="email"
              value=""
            />
          </div>
          <button
            class="sc-jrAGKZ cntfQH"
            data-testid="confirm-booking"
          >
            Confirm Booking
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <nav
      class="sc-fubDmA jSFNkN"
    >
      <a
        aria-current="page"
        class="sc-pGaPU kpubXZ active"
        href="/"
      >
        New Booking
      </a>
      <a
        class="sc-pGaPU zBnL"
        href="/my-bookings"
      >
        My Bookings
      </a>
    </nav>
    <div
      class="sc-kstpWv UAquR"
    >
      <form
        class="sc-crrtmM hShWtl"
        data-testid="booking-form"
      >
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check in
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-in"
            max="Invalid date"
            min="2023-12-31"
            name="checkIn"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check out
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-out"
            min="2024-01-01"
            name="checkOut"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Number of guests
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-qty-guests"
            max="4"
            min="1"
            name="qtyGuests"
            type="number"
            value=""
          />
        </div>
        <button
          class="sc-jrAGKZ cntfQH"
          data-testid="check-availability"
        >
          Check Availability
        </button>
      </form>
      <ul
        class="sc-fodVRF bXDvv"
      >
        <div
          class="sc-hBEZvw jsXyEX"
          data-testid="no-results-content"
        >
          <img
            alt="no results image"
            class="sc-eCstZk cgIxof"
            data-testid="image"
          />
          <p>
            We didn't find available bedrooms with this search criteria
          </p>
        </div>
      </ul>
    </div>
    <div
      class="sc-idOjMB kWZquY"
    />
    <div
      class="sc-cxFKTC hsKcGb"
      data-testid="base-drawer"
    >
      <button
        class="sc-dmlpXa gYemGx"
        data-testid="close-button"
      >
        X
      </button>
      <form
        class="sc-crrtmM XATYL"
        data-testid="confirm-your-booking-form"
      >
        <h3
          class="sc-dQpIV fPWcU"
        >
          Confirm Your Booking
        </h3>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Name
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-name"
            name="name"
            type="text"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Email
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-email"
            name="email"
            type="email"
            value=""
          />
        </div>
        <button
          class="sc-jrAGKZ cntfQH"
          data-testid="confirm-booking"
        >
          Confirm Booking
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ResultsList /> should render no results content without selected dates 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    style="overflow: unset;"
  >
    <div>
      <nav
        class="sc-fubDmA jSFNkN"
      >
        <a
          aria-current="page"
          class="sc-pGaPU kpubXZ active"
          href="/"
        >
          New Booking
        </a>
        <a
          class="sc-pGaPU zBnL"
          href="/my-bookings"
        >
          My Bookings
        </a>
      </nav>
      <div
        class="sc-kstpWv UAquR"
      >
        <form
          class="sc-crrtmM hShWtl"
          data-testid="booking-form"
        >
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Check in
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-check-in"
              max="Invalid date"
              min="2023-12-31"
              name="checkIn"
              type="date"
              value=""
            />
          </div>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Check out
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-check-out"
              min="2024-01-01"
              name="checkOut"
              type="date"
              value=""
            />
          </div>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Number of guests
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-qty-guests"
              max="4"
              min="1"
              name="qtyGuests"
              type="number"
              value=""
            />
          </div>
          <button
            class="sc-jrAGKZ cntfQH"
            data-testid="check-availability"
          >
            Check Availability
          </button>
        </form>
        <ul
          class="sc-fodVRF bXDvv"
        >
          <div
            class="sc-hBEZvw jsXyEX"
            data-testid="no-results-content"
          >
            <img
              alt="no results image"
              class="sc-eCstZk cgIxof"
              data-testid="image"
            />
            <p>
              We didn't find available bedrooms with this search criteria
            </p>
          </div>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <nav
      class="sc-fubDmA jSFNkN"
    >
      <a
        aria-current="page"
        class="sc-pGaPU kpubXZ active"
        href="/"
      >
        New Booking
      </a>
      <a
        class="sc-pGaPU zBnL"
        href="/my-bookings"
      >
        My Bookings
      </a>
    </nav>
    <div
      class="sc-kstpWv UAquR"
    >
      <form
        class="sc-crrtmM hShWtl"
        data-testid="booking-form"
      >
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check in
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-in"
            max="Invalid date"
            min="2023-12-31"
            name="checkIn"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check out
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-out"
            min="2024-01-01"
            name="checkOut"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Number of guests
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-qty-guests"
            max="4"
            min="1"
            name="qtyGuests"
            type="number"
            value=""
          />
        </div>
        <button
          class="sc-jrAGKZ cntfQH"
          data-testid="check-availability"
        >
          Check Availability
        </button>
      </form>
      <ul
        class="sc-fodVRF bXDvv"
      >
        <div
          class="sc-hBEZvw jsXyEX"
          data-testid="no-results-content"
        >
          <img
            alt="no results image"
            class="sc-eCstZk cgIxof"
            data-testid="image"
          />
          <p>
            We didn't find available bedrooms with this search criteria
          </p>
        </div>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ResultsList /> should render the list with all bedrooms that match the defined search criteria 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    style="overflow: unset;"
  >
    <div>
      <nav
        class="sc-fubDmA jSFNkN"
      >
        <a
          aria-current="page"
          class="sc-pGaPU kpubXZ active"
          href="/"
        >
          New Booking
        </a>
        <a
          class="sc-pGaPU zBnL"
          href="/my-bookings"
        >
          My Bookings
        </a>
      </nav>
      <div
        class="sc-kstpWv UAquR"
      >
        <form
          class="sc-crrtmM hShWtl"
          data-testid="booking-form"
        >
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Check in
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-check-in"
              max="Invalid date"
              min="2023-12-31"
              name="checkIn"
              type="date"
              value=""
            />
          </div>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Check out
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-check-out"
              min="2024-01-01"
              name="checkOut"
              type="date"
              value=""
            />
          </div>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Number of guests
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-qty-guests"
              max="4"
              min="1"
              name="qtyGuests"
              type="number"
              value=""
            />
          </div>
          <button
            class="sc-jrAGKZ cntfQH"
            data-testid="check-availability"
          >
            Check Availability
          </button>
        </form>
        <ul
          class="sc-fodVRF bXDvv"
        >
          <li
            class="sc-fFubCH cqBzaO"
            data-testid="bedroom-info"
          >
            <div
              class="sc-lmoLKH fhQqbM"
            >
              <img
                alt="bedroom1 pic"
                class="sc-eCstZk gffOIU"
                data-testid="image"
              />
            </div>
            <div
              class="sc-iJuWdM ctvoSv"
            >
              <h2
                class="sc-giInvV dyMsEO"
                data-testid="bedroom-name"
              >
                Bedroom 
                1
              </h2>
              <ul
                data-testid="bedroom-details"
              >
                <li>
                  Quadruple
                   bedroom
                </li>
                <li>
                  1
                   
                  double
                   bed
                </li>
                <li>
                  2
                   
                  single
                   bed
                  s
                </li>
              </ul>
            </div>
            <div
              class="sc-ezrdqu jCyGyK"
            >
              <span>
                7
                 nights
              </span>
              <span
                class="sc-bYEuID hWLMel"
                data-testid="bedroom-total-price"
              >
                $ 
                455
              </span>
              <button
                class="sc-jrAGKZ gPPraH"
                data-testid="book-now"
              >
                Book Now
              </button>
            </div>
          </li>
          <li
            class="sc-fFubCH cqBzaO"
            data-testid="bedroom-info"
          >
            <div
              class="sc-lmoLKH fhQqbM"
            >
              <img
                alt="bedroom3 pic"
                class="sc-eCstZk gffOIU"
                data-testid="image"
              />
            </div>
            <div
              class="sc-iJuWdM ctvoSv"
            >
              <h2
                class="sc-giInvV dyMsEO"
                data-testid="bedroom-name"
              >
                Bedroom 
                3
              </h2>
              <ul
                data-testid="bedroom-details"
              >
                <li>
                  Triple
                   bedroom
                </li>
                <li>
                  1
                   
                  double
                   bed
                </li>
                <li>
                  1
                   
                  single
                   bed
                </li>
              </ul>
            </div>
            <div
              class="sc-ezrdqu jCyGyK"
            >
              <span>
                7
                 nights
              </span>
              <span
                class="sc-bYEuID hWLMel"
                data-testid="bedroom-total-price"
              >
                $ 
                385
              </span>
              <button
                class="sc-jrAGKZ gPPraH"
                data-testid="book-now"
              >
                Book Now
              </button>
            </div>
          </li>
          <li
            class="sc-fFubCH cqBzaO"
            data-testid="bedroom-info"
          >
            <div
              class="sc-lmoLKH fhQqbM"
            >
              <img
                alt="bedroom4 pic"
                class="sc-eCstZk gffOIU"
                data-testid="image"
              />
            </div>
            <div
              class="sc-iJuWdM ctvoSv"
            >
              <h2
                class="sc-giInvV dyMsEO"
                data-testid="bedroom-name"
              >
                Bedroom 
                4
              </h2>
              <ul
                data-testid="bedroom-details"
              >
                <li>
                  Triple
                   bedroom
                </li>
                <li>
                  3
                   
                  single
                   bed
                  s
                </li>
              </ul>
            </div>
            <div
              class="sc-ezrdqu jCyGyK"
            >
              <span>
                7
                 nights
              </span>
              <span
                class="sc-bYEuID hWLMel"
                data-testid="bedroom-total-price"
              >
                $ 
                350
              </span>
              <button
                class="sc-jrAGKZ gPPraH"
                data-testid="book-now"
              >
                Book Now
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <nav
      class="sc-fubDmA jSFNkN"
    >
      <a
        aria-current="page"
        class="sc-pGaPU kpubXZ active"
        href="/"
      >
        New Booking
      </a>
      <a
        class="sc-pGaPU zBnL"
        href="/my-bookings"
      >
        My Bookings
      </a>
    </nav>
    <div
      class="sc-kstpWv UAquR"
    >
      <form
        class="sc-crrtmM hShWtl"
        data-testid="booking-form"
      >
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check in
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-in"
            max="Invalid date"
            min="2023-12-31"
            name="checkIn"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check out
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-out"
            min="2024-01-01"
            name="checkOut"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Number of guests
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-qty-guests"
            max="4"
            min="1"
            name="qtyGuests"
            type="number"
            value=""
          />
        </div>
        <button
          class="sc-jrAGKZ cntfQH"
          data-testid="check-availability"
        >
          Check Availability
        </button>
      </form>
      <ul
        class="sc-fodVRF bXDvv"
      >
        <li
          class="sc-fFubCH cqBzaO"
          data-testid="bedroom-info"
        >
          <div
            class="sc-lmoLKH fhQqbM"
          >
            <img
              alt="bedroom1 pic"
              class="sc-eCstZk gffOIU"
              data-testid="image"
            />
          </div>
          <div
            class="sc-iJuWdM ctvoSv"
          >
            <h2
              class="sc-giInvV dyMsEO"
              data-testid="bedroom-name"
            >
              Bedroom 
              1
            </h2>
            <ul
              data-testid="bedroom-details"
            >
              <li>
                Quadruple
                 bedroom
              </li>
              <li>
                1
                 
                double
                 bed
              </li>
              <li>
                2
                 
                single
                 bed
                s
              </li>
            </ul>
          </div>
          <div
            class="sc-ezrdqu jCyGyK"
          >
            <span>
              7
               nights
            </span>
            <span
              class="sc-bYEuID hWLMel"
              data-testid="bedroom-total-price"
            >
              $ 
              455
            </span>
            <button
              class="sc-jrAGKZ gPPraH"
              data-testid="book-now"
            >
              Book Now
            </button>
          </div>
        </li>
        <li
          class="sc-fFubCH cqBzaO"
          data-testid="bedroom-info"
        >
          <div
            class="sc-lmoLKH fhQqbM"
          >
            <img
              alt="bedroom3 pic"
              class="sc-eCstZk gffOIU"
              data-testid="image"
            />
          </div>
          <div
            class="sc-iJuWdM ctvoSv"
          >
            <h2
              class="sc-giInvV dyMsEO"
              data-testid="bedroom-name"
            >
              Bedroom 
              3
            </h2>
            <ul
              data-testid="bedroom-details"
            >
              <li>
                Triple
                 bedroom
              </li>
              <li>
                1
                 
                double
                 bed
              </li>
              <li>
                1
                 
                single
                 bed
              </li>
            </ul>
          </div>
          <div
            class="sc-ezrdqu jCyGyK"
          >
            <span>
              7
               nights
            </span>
            <span
              class="sc-bYEuID hWLMel"
              data-testid="bedroom-total-price"
            >
              $ 
              385
            </span>
            <button
              class="sc-jrAGKZ gPPraH"
              data-testid="book-now"
            >
              Book Now
            </button>
          </div>
        </li>
        <li
          class="sc-fFubCH cqBzaO"
          data-testid="bedroom-info"
        >
          <div
            class="sc-lmoLKH fhQqbM"
          >
            <img
              alt="bedroom4 pic"
              class="sc-eCstZk gffOIU"
              data-testid="image"
            />
          </div>
          <div
            class="sc-iJuWdM ctvoSv"
          >
            <h2
              class="sc-giInvV dyMsEO"
              data-testid="bedroom-name"
            >
              Bedroom 
              4
            </h2>
            <ul
              data-testid="bedroom-details"
            >
              <li>
                Triple
                 bedroom
              </li>
              <li>
                3
                 
                single
                 bed
                s
              </li>
            </ul>
          </div>
          <div
            class="sc-ezrdqu jCyGyK"
          >
            <span>
              7
               nights
            </span>
            <span
              class="sc-bYEuID hWLMel"
              data-testid="bedroom-total-price"
            >
              $ 
              350
            </span>
            <button
              class="sc-jrAGKZ gPPraH"
              data-testid="book-now"
            >
              Book Now
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ResultsList /> should render the list with the available bedrooms that match the defined search criteria 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    style="overflow: unset;"
  >
    <div>
      <nav
        class="sc-fubDmA jSFNkN"
      >
        <a
          aria-current="page"
          class="sc-pGaPU kpubXZ active"
          href="/"
        >
          New Booking
        </a>
        <a
          class="sc-pGaPU zBnL"
          href="/my-bookings"
        >
          My Bookings
        </a>
      </nav>
      <div
        class="sc-kstpWv UAquR"
      >
        <form
          class="sc-crrtmM hShWtl"
          data-testid="booking-form"
        >
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Check in
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-check-in"
              max="Invalid date"
              min="2023-12-31"
              name="checkIn"
              type="date"
              value=""
            />
          </div>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Check out
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-check-out"
              min="2024-01-01"
              name="checkOut"
              type="date"
              value=""
            />
          </div>
          <div
            class="sc-jSguLX klDGSv"
          >
            <label
              class="sc-gKsecS dRZBKP"
              data-testid="label"
            >
              Number of guests
            </label>
            <input
              class="sc-iBPTVF YEbKX"
              data-testid="input-qty-guests"
              max="4"
              min="1"
              name="qtyGuests"
              type="number"
              value=""
            />
          </div>
          <button
            class="sc-jrAGKZ cntfQH"
            data-testid="check-availability"
          >
            Check Availability
          </button>
        </form>
        <ul
          class="sc-fodVRF bXDvv"
        >
          <li
            class="sc-fFubCH cqBzaO"
            data-testid="bedroom-info"
          >
            <div
              class="sc-lmoLKH fhQqbM"
            >
              <img
                alt="bedroom1 pic"
                class="sc-eCstZk gffOIU"
                data-testid="image"
              />
            </div>
            <div
              class="sc-iJuWdM ctvoSv"
            >
              <h2
                class="sc-giInvV dyMsEO"
                data-testid="bedroom-name"
              >
                Bedroom 
                1
              </h2>
              <ul
                data-testid="bedroom-details"
              >
                <li>
                  Quadruple
                   bedroom
                </li>
                <li>
                  1
                   
                  double
                   bed
                </li>
                <li>
                  2
                   
                  single
                   bed
                  s
                </li>
              </ul>
            </div>
            <div
              class="sc-ezrdqu jCyGyK"
            >
              <span>
                7
                 nights
              </span>
              <span
                class="sc-bYEuID hWLMel"
                data-testid="bedroom-total-price"
              >
                $ 
                455
              </span>
              <button
                class="sc-jrAGKZ gPPraH"
                data-testid="book-now"
              >
                Book Now
              </button>
            </div>
          </li>
          <li
            class="sc-fFubCH cqBzaO"
            data-testid="bedroom-info"
          >
            <div
              class="sc-lmoLKH fhQqbM"
            >
              <img
                alt="bedroom4 pic"
                class="sc-eCstZk gffOIU"
                data-testid="image"
              />
            </div>
            <div
              class="sc-iJuWdM ctvoSv"
            >
              <h2
                class="sc-giInvV dyMsEO"
                data-testid="bedroom-name"
              >
                Bedroom 
                4
              </h2>
              <ul
                data-testid="bedroom-details"
              >
                <li>
                  Triple
                   bedroom
                </li>
                <li>
                  3
                   
                  single
                   bed
                  s
                </li>
              </ul>
            </div>
            <div
              class="sc-ezrdqu jCyGyK"
            >
              <span>
                7
                 nights
              </span>
              <span
                class="sc-bYEuID hWLMel"
                data-testid="bedroom-total-price"
              >
                $ 
                350
              </span>
              <button
                class="sc-jrAGKZ gPPraH"
                data-testid="book-now"
              >
                Book Now
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <nav
      class="sc-fubDmA jSFNkN"
    >
      <a
        aria-current="page"
        class="sc-pGaPU kpubXZ active"
        href="/"
      >
        New Booking
      </a>
      <a
        class="sc-pGaPU zBnL"
        href="/my-bookings"
      >
        My Bookings
      </a>
    </nav>
    <div
      class="sc-kstpWv UAquR"
    >
      <form
        class="sc-crrtmM hShWtl"
        data-testid="booking-form"
      >
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check in
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-in"
            max="Invalid date"
            min="2023-12-31"
            name="checkIn"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check out
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-out"
            min="2024-01-01"
            name="checkOut"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Number of guests
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-qty-guests"
            max="4"
            min="1"
            name="qtyGuests"
            type="number"
            value=""
          />
        </div>
        <button
          class="sc-jrAGKZ cntfQH"
          data-testid="check-availability"
        >
          Check Availability
        </button>
      </form>
      <ul
        class="sc-fodVRF bXDvv"
      >
        <li
          class="sc-fFubCH cqBzaO"
          data-testid="bedroom-info"
        >
          <div
            class="sc-lmoLKH fhQqbM"
          >
            <img
              alt="bedroom1 pic"
              class="sc-eCstZk gffOIU"
              data-testid="image"
            />
          </div>
          <div
            class="sc-iJuWdM ctvoSv"
          >
            <h2
              class="sc-giInvV dyMsEO"
              data-testid="bedroom-name"
            >
              Bedroom 
              1
            </h2>
            <ul
              data-testid="bedroom-details"
            >
              <li>
                Quadruple
                 bedroom
              </li>
              <li>
                1
                 
                double
                 bed
              </li>
              <li>
                2
                 
                single
                 bed
                s
              </li>
            </ul>
          </div>
          <div
            class="sc-ezrdqu jCyGyK"
          >
            <span>
              7
               nights
            </span>
            <span
              class="sc-bYEuID hWLMel"
              data-testid="bedroom-total-price"
            >
              $ 
              455
            </span>
            <button
              class="sc-jrAGKZ gPPraH"
              data-testid="book-now"
            >
              Book Now
            </button>
          </div>
        </li>
        <li
          class="sc-fFubCH cqBzaO"
          data-testid="bedroom-info"
        >
          <div
            class="sc-lmoLKH fhQqbM"
          >
            <img
              alt="bedroom4 pic"
              class="sc-eCstZk gffOIU"
              data-testid="image"
            />
          </div>
          <div
            class="sc-iJuWdM ctvoSv"
          >
            <h2
              class="sc-giInvV dyMsEO"
              data-testid="bedroom-name"
            >
              Bedroom 
              4
            </h2>
            <ul
              data-testid="bedroom-details"
            >
              <li>
                Triple
                 bedroom
              </li>
              <li>
                3
                 
                single
                 bed
                s
              </li>
            </ul>
          </div>
          <div
            class="sc-ezrdqu jCyGyK"
          >
            <span>
              7
               nights
            </span>
            <span
              class="sc-bYEuID hWLMel"
              data-testid="bedroom-total-price"
            >
              $ 
              350
            </span>
            <button
              class="sc-jrAGKZ gPPraH"
              data-testid="book-now"
            >
              Book Now
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
